fix: The UI text on the Service Monitoring Exporter page goes out of the box.

--- a/src/pages/projects/components/Modals/ServiceMonitor/Authorization/index.scss
+++ b/src/pages/projects/components/Modals/ServiceMonitor/Authorization/index.scss
@@ -72,3 +72,11 @@
     color: $blue-color03;
   }
 }
+
+.dirCheck {
+  :global {
+    label.radio-button {
+      height: 47px;
+    }
+  }
+}
